# tgchatbot

./: .env.example  .gitignore  README.md  chat.py  lib_chat.py  lib_deepseek.py  lib_gemini.py  lib_gpt35.py  lib_gpt4.py  requirements.txt  utils.py
retriever/: Cargo.toml
retriever/src/: indexer.rs  main.rs  schema.rs  search.rs  tokenizers.rs
scripts/: build_sticker_index.py  merge_auto_note_rows.py  migrate_uid_json.py  query_sticker_index.py  rebuild_tantivy_index.py  show_style_clusters.py  test_sticker_semantics.py
tgchatbot/: app.py  config.py  logging_config.py  settings_schema.py
tgchatbot/core/: compaction_schema.py  context_state.py  events.py  policy.py  prompting.py  runtime.py  token_estimator.py
tgchatbot/domain/: models.py
tgchatbot/media/: ingest.py  link_prefetch.py
tgchatbot/providers/: anthropic_stub.py  base.py  gemini.py  gemini_stub.py  openai_responses.py
tgchatbot/stickers/: __init__.py  catalog.py  persona.py  plan.py  retrieval_client.py  schema.py  semantic_index.py  session_style.py
tgchatbot/storage/: artifacts.py  presets.py  sqlite_store.py
tgchatbot/tools/: base.py  file_send.py  python_exec.py  registry.py  remote_workspace.py  shell_exec.py  sticker_send.py
tgchatbot/transports/: base.py  discord_adapter.py  telegram_adapter.py  telegram_render.py
